--- a/Universidad/Universidad.MVC/Universidad.MVC.csproj
+++ b/Universidad/Universidad.MVC/Universidad.MVC.csproj
@@ -140,6 +140,9 @@
     <Compile Include="Controllers\EstadoCivilController.cs" />
     <Compile Include="Controllers\GeneroController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DTO\AlumoDto.cs" />
+    <Compile Include="DTO\EstadoCivilDto.cs" />
+    <Compile Include="DTO\GeneroDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -199,7 +202,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="DTO\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
